Change line height of ul to stop overlapping expense types

--- a/static/style.css
+++ b/static/style.css
@@ -68,6 +68,7 @@ a {
 	margin:0;
 	padding:10px;
 	list-style-type: none;
+	line-height: 35px;
 	/*text-align: center;*/
 }
 
